# latte-compiler

./: .gitattributes  .gitignore  Makefile  README.md  latte.cabal  stack.yaml  todo
lib/: runtime.bc  runtime.ll
src/: AbsLatte.hs  GenLatte.hs  IRLatte.hs  IrLatte.hs  LexLatte.hs  LlvmLatte.hs  Main.hs  OptLatte.hs  ParLatte.hs  SsaLatte.hs  TypeCheckLatte.hs  UtilsLatte.hs  latc.hs
test/: Main.hs
test/tests/failed/: 01.lat  02.lat  03.lat  04.lat  04.output  05.lat  06.lat
test/tests/misc/good/: InBlockDecls.lat  InternalNames.lat  Lazy.lat  bool.lat  const_folding.lat  quot.lat  ret.lat  ret_partial.lat  string_const_folding.lat
test/tests/mrjp-tests/good/arrays/: array_length.lat.disabled  array_read.lat.disabled
test/tests/mrjp-tests/good/basic/: InBlockDecls.output  Lazy.output  declaration_in_while.lat
