name:                latte
version:             0.1.0.0
-- synopsis:
-- description:
author:              Cezary Siłuszyk
maintainer:          cs321191@students.mimuw.edu.pl
copyright:           2017 Cezary Siłuszyk
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable latte
  hs-source-dirs:      src
  main-is:             latc.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array,
                       mtl,
                       containers
