name:                latte
version:             0.1.0.0
author:              Cezary Siłuszyk
maintainer:          cs321191@students.mimuw.edu.pl
copyright:           2018 Cezary Siłuszyk
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable latc_llvm
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       AbsLatte
                       ErrM
                       GenLatte
                       LexLatte
                       LlvmLatte
                       ParLatte
                       SsaLatte
                       TypeCheckLatte
                       UtilsLatte
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array,
                       mtl,
                       containers,
                       extra

test-suite latc-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:    base >=4.7 && < 5,
                    HTF >= 0.12
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010