name:                latte
version:             1.1.1
author:              Cezary Siłuszyk
maintainer:          cs321191@students.mimuw.edu.pl
copyright:           2018 Cezary Siłuszyk
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-dir:            lib
data-files:          runtime.bc

executable latc_llvm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array,
                       mtl,
                       containers,
                       extra,
                       filepath,
                       process
  other-modules:       AbsLatte
                       ErrM
                       GenLatte
                       LexLatte
                       LlvmLatte
                       OptLatte
                       ParLatte
                       Paths_latte
                       SsaLatte
                       TypeCheckLatte
                       UtilsLatte

test-suite latc-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:    base >=4.7 && < 5,
                    HTF >= 0.12
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  other-modules:    Paths_latte
